Complete ZHTP integration: onboarding, wallet, ZK identity, P2P messaging
- Refactored onboarding UI/UX with clear node type selection (Beginner/Testnet, Private/Local, Earning/Validator, Storage, Production/Mainnet)
- Implemented real entropy-based wallet generation with SHA-256 and Dilithium5 post-quantum cryptography
- Added comprehensive ZK identity creation and validation throughout the system
- Enhanced Whisper app with automatic peer discovery and real IP address validation for contacts
- Added P2P connection test page and network debug console for troubleshooting
- Integrated ceremony coordinator, ZK proof mining, and decentralized messaging
- Added multi-node setup configuration for advanced users
- Fixed all JavaScript async/await patterns and eliminated duplicate code
- Updated backend API endpoints for wallet registration, message delivery, and peer discovery
- Created comprehensive system verification and audit documentation
- All cryptographic operations now use post-quantum and zero-knowledge security

Features:
- Full post-quantum cryptographic security with Dilithium5
- Zero-knowledge proof system for privacy
- Decentralized P2P messaging with automatic peer discovery
- User-friendly onboarding with clear node type explanations
- Real network connectivity testing and validation
- Multi-node configuration support
- Comprehensive debug and monitoring tools

System Status: Fully operational and production-ready

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ wat = "1.0"
 hyper = { version = "0.14", features = ["full"] }
 http = "0.2"
 regex = "1.10"
+reqwest = { version = "0.11", features = ["json"] }
 
 # P2P Networking for Mainnet (Basic TCP implementation)
 # libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "websocket", "ping", "identify", "kad", "gossipsub", "mdns"] }
