Update .dockerignore to include ZHTP workspace; add axom dependency in Cargo files and enhance generate_witness.js with improved error handling and validation

--- a/.dockerignore
+++ b/.dockerignore
@@ -40,6 +40,7 @@ deploy/docker-compose*.yml
 .env.local
 .env.development
 .env.test
+ZHTP.code-workspace
 
 # Ignore large binary files and databases
 *.db
