--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ hyper = { version = "0.14", features = ["full"] }
 http = "0.2"
 regex = "1.10"
 reqwest = { version = "0.11", features = ["json"] }
+axom = "0.0.1"
 
 # P2P Networking for Mainnet (Basic TCP implementation)
 # libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "websocket", "ping", "identify", "kad", "gossipsub", "mdns"] }
