Update .dockerignore to include Cargo.lock and refactor DHT node methods for improved reliability scoring and proof verification

--- a/.dockerignore
+++ b/.dockerignore
@@ -41,6 +41,7 @@ deploy/docker-compose*.yml
 .env.development
 .env.test
 ZHTP.code-workspace
+Cargo.lock
 
 # Ignore large binary files and databases
 *.db
